<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mellow.activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#ffffff"
    style="@style/loginTheme">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_marginTop="30dp"
        android:src="@drawable/mellow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/username_input"
            android:hint="@string/username_input"
            android:textAlignment="center"
            android:singleLine="true"
            android:textColorHint="#909090"
            android:textSize="20sp"
            android:backgroundTint="#5c5c5c"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/username_input"
            android:layout_below="@+id/username_input"
            android:layout_marginTop="15dp"
            android:backgroundTint="#5c5c5c"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColorHint="#909090"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/error_message"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:focusableInTouchMode="false" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_button"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/login"
        android:onClick="onConfirmClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/access_type_information_register"
        android:id="@+id/access_type_information"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/access_type_register"
        android:id="@+id/access_type_text"
        android:layout_gravity="center_horizontal"
        android:textColor="#2c6f62"
        android:onClick="onChangeAccessTypeClicked"
        android:gravity="center_vertical"
        android:textSize="19sp"
        android:layout_marginTop="3dp" />

</LinearLayout>
