<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/list_items_design"
    android:orientation="vertical"
    android:id="@+id/main_container">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:id="@+id/profile_container">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/profile_picture"
            android:src="@drawable/images" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/name_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Test"
                android:id="@+id/firstname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Testsson"
                android:id="@+id/lastname"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="This is just a temp text to show how it will look in the future!"
        android:id="@+id/content_text"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#1f1f1f"
        android:textSize="17sp"
        android:paddingTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/button_container"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/like_string"
            android:id="@+id/like_button"
            android:background="#d5d5d5"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/comment_string"
            android:id="@+id/comment_button"
            android:background="#d5d5d5"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/share_string"
            android:id="@+id/share_button"
            android:background="#d5d5d5"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>